# EarClipping

./: .gitignore  Bounds.cpp  Bounds.h  CMakeLists.txt  CsvInput.cpp  CsvInput.h  CsvOutput.cpp  CsvOutput.h  EarClipping.cpp  EarClipping.h  GeometryEarClipping.vcxproj  GeometryTypes.cpp  GeometryTypes.h  KDTree.cpp  KDTree.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  README.md  README_Visual_Studio.md  SvgOutput.cpp  SvgOutput.h  Triangle.cpp  Triangle.h  UnitTests.cpp  UnitTests.h  main.cpp  triangles.csv
EarClippingPackage/: Bounds.cpp  CsvInput.cpp  CsvInput.h  EarClipping.h  GeometryEarClipping.sln  GeometryEarClipping.vcxproj  GeometryTypes.cpp  KDTree.cpp  KDTree.h  Point.cpp  Polygon.cpp  Polygon.h  README  SvgOutput.cpp  UnitTests.cpp  main.cpp  simple_concave_demo.csv
